<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">青果网</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="guide_one_main">我们都在使用青果网</string>
	<string name="guide_one_sub">你还在等什么?</string>
	<string name="guide_two_main">神从创造中找到他自己</string>
	<string name="guide_two_sub">-泰戈尔·雪狼骑兵</string>
	<string name="guide_three_main">生命不息</string>
	<string name="guide_three_sub">奋斗不止</string>
	
	<string name="back_btn_arrow">&lt;</string>
	<string name="no_picture">暂无图片</string>

	
	<string name="login_title">登陆</string>
	<string name="login_username">用户名</string>
	<string name="login_username_default">用户名/手机/邮箱</string>
	<string name="login_password">密码</string>
	<string name="login_password_default">字母/数字/下划线</string>
	<string name="login_remeber">记住密码</string>
	<string name="login_btn">登陆</string>
	
	<string name="admin_title">后台</string>
	<string name="article_add_btn">添加文章</string>
	<string name="article_title">文章标题</string>
	<string name="article_content">文章内容</string>
</resources>
