<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="#fff"
	 >
	 <RelativeLayout 
	     android:layout_width="match_parent"
	     android:layout_height="45dp"
	     android:background="#81B60E"
	     >
	     <TextView 
	         android:layout_width="40dp"
	         android:layout_height="45dp"
	         android:text="@string/back_btn_arrow"
	         android:textColor="#fff"
	         android:textSize="20sp"
	         android:layout_alignParentLeft="true"
	         android:layout_marginLeft="5dp"
	         android:gravity="center"
	         android:background="@drawable/selector_top_back"
	         android:clickable="true"
	         android:onClick="openPrevActivity"
	         />
	     <TextView 
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:text="@string/login_title"
		     android:textColor="#fff"
		     android:layout_centerInParent="true"
		     android:textSize="20sp"
		     />	
		 <TextView 
		     android:layout_width="match_parent"
		     android:layout_height="2dp"
		     android:background="#7BAE0F"
		     android:layout_alignParentBottom="true"
		     />	     
	 </RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    >
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/login_username"
		    android:layout_marginTop="20dp"
		    android:textColor="#444"
		    />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/login_username"
		    android:hint="@string/login_username_default"
		    android:textColorHint="#ccc"
		    android:textSize="14sp"
		    />
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/login_password"
		    android:textColor="#444"
		    />
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/login_password"
		    android:inputType="textPassword"
		    android:hint="@string/login_password_default"
		    android:textColorHint="#ccc"
		    android:textSize="14sp"
		    />
		<CheckBox 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login_remeber"
		    android:checked="true"
		    android:textColor="#444"
		    />
		<Button 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/login_btn"
		    android:id="@+id/login_btn"
		    android:background="@drawable/selector_login_btn"
		    android:textColor="#fff"
		    android:layout_marginTop="20dp"
		    />
	</LinearLayout>
</LinearLayout>


