<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ViewFlipper 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/guideFlipper"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#59ADDD"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_one_main"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="30dp"
                android:textColor="#fff"
                android:textSize="25dp"
                android:typeface="monospace"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_one_sub"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1BBC9B"
            android:orientation="vertical"
            >
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_two_main"
                android:layout_marginTop="300dp"
                android:layout_marginRight="30dp"
                android:textColor="#fff"
                android:textSize="25dp"
                android:typeface="monospace"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_two_sub"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:gravity="right"
                />           
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5B963"
            android:orientation="vertical"
            >
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_three_main"
                android:layout_marginTop="250dp"
                android:textColor="#fff"
                android:textSize="25dp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_three_sub"
                android:textColor="#fff"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                />            
        </LinearLayout>
    </ViewFlipper>
</LinearLayout>

